// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ggzTnl"
  id={null}
  rows={null}
>
  <ul
    className="Progress__Container-pxi9hw-1 tJULT"
    id={null}
  >
    <li
      className="Progress__StepItem-pxi9hw-0 iRonMz"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          this is what you do
        </p>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 iRonMz"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          this is what you do
        </p>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jazqcC"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          this is what you do
        </p>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          this is what you do
        </p>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
          fontSize="1rem"
          fontWeight={400}
          id={null}
          letterSpacing="0.5px"
        >
          this is what you do
        </p>
      </div>
    </li>
  </ul>
  <div
    className="Bar__BarLayout-icfo76-2 kIycPd"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 gdiuzv"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 cA-dDIm"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iuBYft Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 eATeag"
            color={null}
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Back
          </label>
        </section>
      </button>
    </div>
    <div
      className="Bar__Slot-icfo76-1 gFmZhG"
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 bvFeUx"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iuBYft Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 eATeag"
            color={null}
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Next
          </label>
        </section>
      </button>
    </div>
  </div>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 frcKSb"
  id={null}
  rows={null}
>
  <ul
    className="Progress__Container-pxi9hw-1 tJULT"
    id={null}
  >
    <li
      className="Progress__StepItem-pxi9hw-0 jazqcC"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
  </ul>
  <ul
    className="Progress__Container-pxi9hw-1 tJULT"
    id={null}
  >
    <li
      className="Progress__StepItem-pxi9hw-0 iRonMz"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 iRonMz"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jazqcC"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
    <li
      className="Progress__StepItem-pxi9hw-0 jSZOTi"
      id={null}
    >
      <div
        className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 hytcMk"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          Task
        </h6>
      </div>
    </li>
  </ul>
  <div
    className="Bar__BarLayout-icfo76-2 grMosm"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 bxLAtn"
    >
      <ul
        className="Progress__Container-pxi9hw-1 tJULT"
        id={null}
      >
        <li
          className="Progress__StepItem-pxi9hw-0 iRonMz"
          id={null}
        >
          <div
            className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 hytcMk"
              fontSize="1.2rem"
              fontWeight="400"
              letterSpacing="1px"
            />
          </div>
        </li>
        <li
          className="Progress__StepItem-pxi9hw-0 iRonMz"
          id={null}
        >
          <div
            className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 hytcMk"
              fontSize="1.2rem"
              fontWeight="400"
              letterSpacing="1px"
            />
          </div>
        </li>
        <li
          className="Progress__StepItem-pxi9hw-0 iRonMz"
          id={null}
        >
          <div
            className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 hytcMk"
              fontSize="1.2rem"
              fontWeight="400"
              letterSpacing="1px"
            />
          </div>
        </li>
        <li
          className="Progress__StepItem-pxi9hw-0 jSZOTi"
          id={null}
        >
          <div
            className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 hytcMk"
              fontSize="1.2rem"
              fontWeight="400"
              letterSpacing="1px"
            />
          </div>
        </li>
        <li
          className="Progress__StepItem-pxi9hw-0 jSZOTi"
          id={null}
        >
          <div
            className="Progress__ItemContainer-pxi9hw-2 kHzYqu"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 hytcMk"
              fontSize="1.2rem"
              fontWeight="400"
              letterSpacing="1px"
            />
          </div>
        </li>
      </ul>
    </div>
    <div
      className="Bar__Slot-icfo76-1 ffuaJa"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        30%
      </p>
    </div>
  </div>
</section>
`;

exports[` 3`] = `
<div
  className="Bar__BarLayout-icfo76-2 kShWZi"
  id={null}
  onClick={null}
>
  <div
    className="Bar__Slot-icfo76-1 bxLAtn"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Hello Object
    </p>
  </div>
  <div
    className="Bar__Slot-icfo76-1 gXpcIu"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 cqOtKP ProgressIndicator__ProgressSection-sc-1kcvu29-0 bczQwI"
      id={null}
      rows={null}
    >
      <div
        className="ProgressIndicator__Container-sc-1kcvu29-2 hXjBRO"
      >
        <div
          className="ProgressIndicator__BarItem-sc-1kcvu29-1 dIITpZ"
          id={null}
          style={
            Object {
              "width": "42%",
            }
          }
        />
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        42%
      </p>
    </section>
  </div>
</div>
`;
